# TrafficSignalSimulator

./: CMakeLists.txt  README.md  main.cpp
src/: Intersection.cpp  Intersection.h  Road.cpp  Road.h  Simulation.cpp  Simulation.h
